fixed issue with horizontal scroll

--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -26,7 +26,8 @@ $padding: 15px 15px;
 body, html{
     height: 100%;
     margin: 0;
-    padding: 0;
+    max-width: 100%;
+    overflow-x: hidden;
     font-size: 0.85em;
     font-family: 'Lato', sans-serif;
     scroll-behavior: smooth;
